# try-prefect

./: pyproject.toml
notebooks/: 01__task_and_flow.ipynb  02__task_dependencies.ipynb  03__control_by_triggers.ipynb  04__handling_failure.ipynb
