[tool.poetry]
name = "try-prefect"
version = "0.1.0"
description = ""
authors = ["ryoasu <ryoasu107@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.6"
numpy = "^1.21.2"
prefect = {extras = ["dev"], version = "^0.15.5"}
jupyter = "^1.0.0"
graphviz = "^0.17"

[tool.poetry.dev-dependencies]
ipykernel = "^6.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
